Finished storage migration feature